--- a/workouts/templates/workouts/log_workout.html
+++ b/workouts/templates/workouts/log_workout.html
@@ -9,16 +9,17 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">GymApp</a>
+        <a class="navbar-brand" href="{% url 'home' %}">GymApp</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="{% url 'templates' %}">Templates</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'history' %}">History</a></li>
-                <form action="{% url 'logout' %}" method="post" style="display:inline;">
-                {% csrf_token %}
-                <button type="submit" class="nav-link btn btn-link" style="display:inline; padding:0; color:inherit; text-decoration:none;">Logout</button>
-                </form>
-
+                <li class="nav-item">
+                    <form action="{% url 'logout' %}" method="post" style="display:inline;">
+                        {% csrf_token %}
+                        <button type="submit" class="nav-link btn btn-link" style="padding:0; color:inherit; text-decoration:none;">Logout</button>
+                    </form>
+                </li>
             </ul>
         </div>
     </div>
@@ -32,25 +33,21 @@
         {% for te in template.exercises.all %}
             <div class="card mb-3 shadow-sm">
                 <div class="card-body">
-                    <h5 class="card-title">{{ te.exercise.name }}</h5>
+                    <h5 class="card-title">{{ te.exercise.name }} ({{ te.exercise.muscle_group }})</h5>
                     <div class="row g-3">
                         <div class="col-md-6">
-                            <label for="weight_{{ te.id }}" class="form-label">Weight (kg)</label>
+                            <label for="weight_{{ te.id }}" class="form-label">Weight (lbs)</label>
                             <input type="number" step="0.1" class="form-control" name="weight_{{ te.id }}" id="weight_{{ te.id }}" required>
                         </div>
                         <div class="col-md-6">
                             <label for="reps_{{ te.id }}" class="form-label">Reps</label>
-                            <input type="number" class="form-control" name="reps_{{ te.id }}" id="reps_{{ te.id }}" required>
+                            <input type="number" class="form-control" name="reps_{{ te.id }}" id="reps_{{ te.id }}" value="{{ te.reps }}" required>
                         </div>
                     </div>
                 </div>
             </div>
         {% endfor %}
 
-        <button type="submit" class="btn btn-success btn-lg">Submit Workout</button>
-    </form>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+        <div class="mt-4 d-flex gap-2">
+            <button type="submit" class="btn btn-success btn-lg">Submit Workout</button>
+            <a href="{% url 'templates' %
