--- a/workouts/templates/workouts/create_template.html
+++ b/workouts/templates/workouts/create_template.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Create Workout Template</title>
+    <title>Create Template - GymApp</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 
-<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">GymApp</a>
@@ -15,53 +14,71 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="{% url 'templates' %}">Templates</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'history' %}">History</a></li>
-                <li class="nav-item">
-                    <form action="{% url 'logout' %}" method="post" style="display:inline;">
-                        {% csrf_token %}
-                        <button type="submit" class="nav-link btn btn-link" style="padding:0; color:inherit; text-decoration:none;">Logout</button>
-                    </form>
-                </li>
             </ul>
         </div>
     </div>
 </nav>
 
-<div class="container">
-    <h2 class="mb-4">Create New Workout Template</h2>
+<div class="container py-5">
+    <h2>Create Workout Template</h2>
 
-    {% if messages %}
-        {% for message in messages %}
-            <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}</div>
-        {% endfor %}
-    {% endif %}
-
-    <form method="post">
+    <form method="POST">
         {% csrf_token %}
         <div class="mb-3">
             {{ template_form.name.label_tag }}
             {{ template_form.name }}
         </div>
+        <div class="mb-3">
+            {{ template_form.description.label_tag }}
+            {{ template_form.description }}
+        </div>
 
-        <h4>Exercises</h4>
+        <h4 class="mt-4">Exercises</h4>
         {{ formset.management_form }}
         {% for form in formset %}
-            <div class="card mb-2 p-2">
-                {{ form.exercise.label_tag }} {{ form.exercise }}
-                {{ form.sets.label_tag }} {{ form.sets }}
-                {{ form.reps.label_tag }} {{ form.reps }}
+            <div class="card mb-3 shadow-sm p-3">
+                <div class="row g-3">
+                    <div class="col-md-4">
+                        {{ form.exercise.label_tag }}<br>
+                        {{ form.exercise }}
+                    </div>
+                    <div class="col-md-4">
+                        {{ form.sets.label_tag }}<br>
+                        {{ form.sets }}
+                    </div>
+                    <div class="col-md-4">
+                        {{ form.reps.label_tag }}<br>
+                        {{ form.reps }}
+                    </div>
+                </div>
 
-                <label>Add new exercise:</label>
-                <input type="text" name="form-{{ forloop.counter0 }}-new_exercise_name" placeholder="Exercise Name" class="form-control mb-1">
-                <input type="text" name="form-{{ forloop.counter0 }}-new_muscle_group" placeholder="Muscle Group" class="form-control mb-1">
+                <hr>
+                <h6>Add New Exercise</h6>
+                <div class="row g-3">
+                    <div class="col-md-6">
+                        <input type="text" name="form-{{ forloop.counter0 }}-new_exercise_name" class="form-control" placeholder="Exercise Name">
+                    </div>
+                    <div class="col-md-6">
+                        <input type="text" name="form-{{ forloop.counter0 }}-new_muscle_group" class="form-control" placeholder="Muscle Group">
+                    </div>
+                </div>
 
-                {% if form.DELETE %}
-                    {{ form.DELETE }} <label>Delete</label>
-                {% endif %}
+                <div class="row g-3 mt-2">
+                    <div class="col-md-6">
+                        <input type="number" name="form-{{ forloop.counter0 }}-sets" class="form-control" placeholder="Sets (default 3)">
+                    </div>
+                    <div class="col-md-6">
+                        <input type="number" name="form-{{ forloop.counter0 }}-reps" class="form-control" placeholder="Reps (default 10)">
+                    </div>
+                </div>
+
+                <div class="form-check mt-2">
+                    {{ form.DELETE }} {{ form.DELETE.label_tag }}
+                </div>
             </div>
         {% endfor %}
 
-        <button type="submit" class="btn btn-primary mt-3">Create Template</button>
-        <a href="{% url 'templates' %}" class="btn btn-secondary mt-3">Cancel</a>
+        <button type="submit" class="btn btn-success btn-lg mt-3">Create Template</button>
     </form>
 </div>
 
